--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier ./src --write",
     "test": "jest",
-    "cypress:open": "cypress open"
+    "cy": "cypress open"
   },
   "eslintConfig": {
     "extends": [
